Enhanced mobile experience, finished game jump logic and fixed issues.

--- a/src/client/styles/app.scss
+++ b/src/client/styles/app.scss
@@ -2,16 +2,11 @@
 @import 'overlay.scss';
 @import 'spinner.scss';
 
-// @font-face {
-// 	font-family: 'GAMECUBEN';
-// 	src: url('../assets/cell.eot');
-// 	src: url('../assets/cell.eot?#iefix') format('embedded-opentype'),
-// 		url('../assets/cell.woff') format('woff'),
-// 		url('../assets/cell.ttf') format('truetype'),
-// 		url('../assets/cell.svg#GAMECUBENDualSet') format('svg');
-// 	font-weight: normal;
-// 	font-style: normal;
-// }
+$icomoon-font-path: '../assets/font/agar-icon';
+@import 'agar-icon/style.scss';
+
+$cell-font-path: '../assets/font/cell';
+@import 'cell-font/stylesheet.scss';
 
 body {
   // Do some reset here.
@@ -23,6 +18,13 @@ body {
   * {
     box-sizing: border-box;
   }
+}
+
+button {
+  cursor: pointer;
+  outline: none;
+  touch-action: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 button.button {
